--- a/gpd-plannig-tool-frontend/index.html
+++ b/gpd-plannig-tool-frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <link href="/vite.svg" rel="icon" type="image/svg+xml"/>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
-    <title>Web Academy Livros</title>
+    <title>GPD-Planning Tool</title>
 </head>
 <body>
 <div id="root"></div>
